              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Added comparison operators == and !=.
        Class Layering:
            - Added copy construction and copy assignment.
            - All access to the underlying triangulation is now const only.
        Class LensSpace:
            - Added member and global swap() functions.
        Class LessDeref:
            - Removed completely.  Just use a lamba if you need to.
        Class LightweightSequence<T>:
            - Added member and global swap() functions.
            - Added a constructor that takes a combination of elements
              and iterator pairs.
            - Replaced the old SubsequenceCompareFirstPtr with the new
              SubsequenceCompareFirst, which is significantly redesigned,
              and which now works with containers whose keys are sequences,
              not pointers to sequences.  The old class is removed completely.
            - Removed the inner class Less.
        Class Link:
            - New routines writheOfComponent() and selfFrame().
            - New routine group().
            - New routines pd(), pdData(), pd(std::ostream&) and fromPD() to
              work with planar diagram codes.  The "magic" constructor that
              takes a string can now also work with planar diagram codes.
            - New routines gaussData(), orientedGaussData(), jenkinsData(),
              dtData(), and fromJenkins(Iterator, Iterator) for working with
              knot/link codes in machine-readable format.
            - Routines gauss(), orientedGauss(), dt() and knotSig() now throw
              exceptions if the link is not supported (e.g., it has zero or
              multiple components), instead of returning the empty string.