@@ -913,7 +913,7 @@ LayeredTorusBundle : class
 Equality type : EqualityType.BY_VALUE
 
 Layering : class
-Equality type : EqualityType.BY_REFERENCE
+Equality type : EqualityType.BY_VALUE
 
 LensSpace : class
 Equality type : EqualityType.BY_VALUE
@@ -1107,7 +1107,7 @@ Perm9 : class
 Equality type : EqualityType.BY_VALUE
 
 PillowTwoSphere : class
-Equality type : EqualityType.BY_REFERENCE
+Equality type : EqualityType.BY_VALUE
 
 PlugTriSolidTorus : class
 Equality type : EqualityType.BY_VALUE
@@ -1260,10 +1260,10 @@ SnapPeaUnsolvedCase : class
 Exception type
 
 SnappedBall : class
-Equality type : EqualityType.NEVER_INSTANTIATED
+Equality type : EqualityType.BY_VALUE
 
 SnappedTwoSphere : class
-Equality type : EqualityType.BY_REFERENCE
+Equality type : EqualityType.BY_VALUE
 
 SnapshotWriteError : class
 Exception type
@@ -1423,7 +1423,7 @@ TreeTraversal_NonSpun : class
 Equality type : EqualityType.BY_REFERENCE
 
 TriSolidTorus : class
-Equality type : EqualityType.NEVER_INSTANTIATED
+Equality type : EqualityType.BY_VALUE
 
 Triangle2 : alias ->  Simplex2
 
